--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
-title: # a name for your Learning Lab course
+title: create a Python script # a name for your Learning Lab course
 tagline: # a short description for your Learning Lab course, displayed on the course catalog
-description: # a longer description for your Learning Lab course, displayed on the course's landing page
+description: Add a file titled "myscript" using file extension .py to the repository # a longer description for your Learning Lab course, displayed on the course's landing page
 
 # Repository setup
 # The following section template information for the repository
@@ -24,8 +24,8 @@ before:
 
 steps:
 # Step 1: EDIT HERE - INTERNAL COMMENT DESCRIBING STEP 
-- title: # the title of the step, shown to the learner in the course progress page
-  description: # a description of the step, shown to the learner in the course progress page
+- title: Add author information # the title of the step, shown to the learner in the course progress page
+  description: Add author information to "myscript.py" # a description of the step, shown to the learner in the course progress page
   event: # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
   actions: # a list of the actions that will occur when the step is triggered by an event
   - type: # the type of action, full list at https://lab.github.com/docs/actions
