--- a/config.yml
+++ b/config.yml
@@ -28,8 +28,11 @@ steps:
   description: Add a file titled "myscript" using file extension .py to the repository # a description of the step, shown to the learner in the course progress page
   event: pull_request.synchronize # the event that will trigger the actions to be executed, full list at https://developer.github.com/v3/activity/events/types/
   actions: # a list of the actions that will occur when the step is triggered by an event
-  - type: # the type of action, full list at https://lab.github.com/docs/actions
-
+- type: gate                            # using the gate action
+  left: '%payload.pull_request.files_changed%'  # get the title from the pull request object inside of the payload
+  operator: ===                         # check for strict equality, see more at https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Comparison_Operators#Identity
+  right: 1
+  
 # Step 2: EDIT HERE -INTERNAL COMMENT FOR STEP 2
 - title: Make Python script executable # the title of the step, shown to the learner in the course progress page
  description: Specify which Python the script should run by adding `#!/usr/bin/env python` to line 1 # a description of the step, shown to the learner in the course progress page
