--- a/config.yml
+++ b/config.yml
@@ -31,7 +31,7 @@ steps:
 - type: gate                            # using the gate action
   left: '%payload.pull_request.files_changed%'  # get the title from the pull request object inside of the payload
   operator: ===                         # check for strict equality, see more at https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Comparison_Operators#Identity
-  right: '1'
+  right: "1"
   
 # Step 2: EDIT HERE -INTERNAL COMMENT FOR STEP 2
 - title: Make Python script executable # the title of the step, shown to the learner in the course progress page
